systemd System and Service Manager

   systemd (214.8-dev)
~~~~~~~
 * core:
 	- remove systemd.confirm_spawn kernel parameter;
 	- remove confirm-spawn argument option;
 	- remove ConfirmSpawn manager dbus property;
 	- don't confirm when spawning process;
 	- add status_errno field to Service struct;
 	- add StatusErrno service dbus property;
 	- flush status text and errno values each time a service is started;
 * libsystemd:
 	- always call epoll_ctl() on mask-updates if edge-triggered;
 	- don't require a signal event source to be enabled for the child event source to work;
 * logind:
 	- allow switching to unused VTs via SwitchTo();
 * units:
 	- bring systemd-tmpfiles-setup-dev.service closer to systemd-tmpfiles-setup.service;
 	- conditionalize static device node logic on CAP_SYS_MODULES instead of CAP_MKNOD;
 	- conditionalize configfs and debugfs with CAP_SYS_RAWIO;
 	- make ExecStopPost action part of ExecStart;
 * systemctl:
 	- show StatusErrno value in "systemctl status";
 	- remove property argument option;
 * shared:
 	- consider 0x7F(DEL) a control chracter;
 	- don't consider tabs special in string_has_cc() anymore;
 	- add string table entries for mips-le archs which were missing;
 	- remove unused functions;
 	- use strjoin in execute_directory function;
 	- remove ring util;
 	- add function to open temp files in selinux mode;
 	- don't make ~/.local/share/systemd/user a symlink;
 	- quote more shell characters in envfiles;
 * virt:
 	- rework container detection logic;
 * man:
 	- add link to Open Group Base Specifications;
 	- add missing archs to ConditionArchitecture= description;
 	- chroot jails are no longer detected by ConditionVirtualization=;
 	- remove machine-info page;
 	- mention XDG_DATA_HOME in systemd.unit;
 * tests:
 	- remove test-ring test;
 * rules:
 	- consistently use "?*" instead of "*?";
 * build:
 	- do not distribute generated emergency.service;
 * bugfix: